--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Chapter_1/1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_1/1_1_Definitions_and_Background.html"><strong aria-hidden="true">1.1.</strong> Definitions and Background</a></li><li class="chapter-item expanded "><a href="Chapter_1/1_2_Binary_vs_Library.html"><strong aria-hidden="true">1.2.</strong> Binary vs Library</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_2/2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_2/2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_3/3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_3/3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li><li class="chapter-item expanded "><a href="Chapter_3/3_2_Dot_Notation.html"><strong aria-hidden="true">3.2.</strong> Dot Notation</a></li><li class="chapter-item expanded "><a href="Chapter_3/3_3_Notes_On_Vectors.html"><strong aria-hidden="true">3.3.</strong> Notes on Vectors</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_4/4_0_References.html"><strong aria-hidden="true">4.</strong> References</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_4/4_1_Ownership.html"><strong aria-hidden="true">4.1.</strong> Ownership</a></li><li class="chapter-item expanded "><a href="Chapter_4/4_2_Notes.html"><strong aria-hidden="true">4.2.</strong> Chapter 4 Notes</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_5/5_0_Characters.html"><strong aria-hidden="true">5.</strong> Characters</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_5/5_1_Biological_Sequencing_Data.html"><strong aria-hidden="true">5.1.</strong> Biological Sequencing Data</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_2_Biological_Vector.html"><strong aria-hidden="true">5.2.</strong> Biological Vector</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_3_Integer_Overflow.html"><strong aria-hidden="true">5.3.</strong> Integer Overflow</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_4_Check_Sequence.html"><strong aria-hidden="true">5.4.</strong> Check Sequence</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_6/6_0_Biological_File_Types.html"><strong aria-hidden="true">6.</strong> Biological File Types</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_0_Images.html"><strong aria-hidden="true">7.</strong> Images</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_7/7_1_Image_Background.html"><strong aria-hidden="true">7.1.</strong> Image Background</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_2_Sequence_To_Image.html"><strong aria-hidden="true">7.2.</strong> Sequence To Image</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_3_Colored_Block.html"><strong aria-hidden="true">7.3.</strong> Colored Block</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_4_Magnify_Images.html"><strong aria-hidden="true">7.4.</strong> Magnify Images</a></li></ol></li><li class="chapter-item expanded "><a href="Index/Continuous_Integration.html"><strong aria-hidden="true">8.</strong> Continuous Integration</a></li><li class="chapter-item expanded "><a href="Index/Endianness.html"><strong aria-hidden="true">9.</strong> Endianness</a></li><li class="chapter-item expanded "><a href="Index/Ascii_Code_Table.html"><strong aria-hidden="true">10.</strong> ASCII Code Table</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Chapter_1/1_0_An_Introduction.html"><strong aria-hidden="true">1.</strong> An Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_1/1_1_Background.html"><strong aria-hidden="true">1.1.</strong> Background</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_2/2_0_Ready_Go.html"><strong aria-hidden="true">2.</strong> Ready Go</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_2/2_1_Add_Subtract_Multiply_Divide.html"><strong aria-hidden="true">2.1.</strong> Add, Subtract, Multiply, Divide</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_2_Semicolons.html"><strong aria-hidden="true">2.2.</strong> Semicolons</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_3_Print_Numbers.html"><strong aria-hidden="true">2.3.</strong> Print Numbers</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_4_Comparing_Printing_Strings.html"><strong aria-hidden="true">2.4.</strong> Comparing Printing Strings</a></li><li class="chapter-item expanded "><a href="Chapter_2/2_5_Level_Cleared.html"><strong aria-hidden="true">2.5.</strong> Level Cleared!</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_3/3_0_Vectors.html"><strong aria-hidden="true">3.</strong> Vectors</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_3/3_1_Print_Vectors.html"><strong aria-hidden="true">3.1.</strong> Print Vectors</a></li><li class="chapter-item expanded "><a href="Chapter_3/3_2_Dot_Notation.html"><strong aria-hidden="true">3.2.</strong> Dot Notation</a></li><li class="chapter-item expanded "><a href="Chapter_3/3_3_Notes_On_Vectors.html"><strong aria-hidden="true">3.3.</strong> Notes on Vectors</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_4/4_0_References.html"><strong aria-hidden="true">4.</strong> References</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_4/4_1_Ownership.html"><strong aria-hidden="true">4.1.</strong> Ownership</a></li><li class="chapter-item expanded "><a href="Chapter_4/4_2_Notes.html"><strong aria-hidden="true">4.2.</strong> Chapter 4 Notes</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_5/5_0_Characters.html"><strong aria-hidden="true">5.</strong> Characters</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_5/5_1_Biological_Sequencing_Data.html"><strong aria-hidden="true">5.1.</strong> Biological Sequencing Data</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_2_Biological_Vector.html"><strong aria-hidden="true">5.2.</strong> Biological Vector</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_3_Integer_Overflow.html"><strong aria-hidden="true">5.3.</strong> Integer Overflow</a></li><li class="chapter-item expanded "><a href="Chapter_5/5_4_Check_Sequence.html"><strong aria-hidden="true">5.4.</strong> Check Sequence</a></li></ol></li><li class="chapter-item expanded "><a href="Chapter_6/6_0_Biological_File_Types.html"><strong aria-hidden="true">6.</strong> Biological File Types</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_0_Images.html"><strong aria-hidden="true">7.</strong> Images</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Chapter_7/7_1_Image_Background.html"><strong aria-hidden="true">7.1.</strong> Image Background</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_2_Sequence_To_Image.html"><strong aria-hidden="true">7.2.</strong> Sequence To Image</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_3_Colored_Block.html"><strong aria-hidden="true">7.3.</strong> Colored Block</a></li><li class="chapter-item expanded "><a href="Chapter_7/7_4_Magnify_Images.html"><strong aria-hidden="true">7.4.</strong> Magnify Images</a></li></ol></li><li class="chapter-item expanded "><a href="Index/Continuous_Integration.html"><strong aria-hidden="true">8.</strong> Continuous Integration</a></li><li class="chapter-item expanded "><a href="Index/Endianness.html"><strong aria-hidden="true">9.</strong> Endianness</a></li><li class="chapter-item expanded "><a href="Index/Ascii_Code_Table.html"><strong aria-hidden="true">10.</strong> ASCII Code Table</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -166,17 +166,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="an-introduction"><a class="header" href="#an-introduction">An Introduction</a></h1>
-<p><img src="Chapter_1/../img/amaryllis.jpg" alt="amaryllis" />
-<em>Amaryllis hybrid, London Horticulture Society</em></p>
-<p>Hello user! You've found the book of bioinformatics in Rust. If you're a total beginner to anything bioinformatics, Rust, or programming, then this is the book for you. I hope it captures your interest like biology captured mine!</p>
-<p>If you want to reach me or have something you want added to the book, let me know <a href="Chapter_1/keybase.io/kana4">here</a>!</p>
-<h1 id="definitions-and-background"><a class="header" href="#definitions-and-background">Definitions and Background</a></h1>
-<p>We'll start by going over a few things that aren't covered in other bioinformatics books but are necessary to understand building in Rust and systems programming. Page on!</p>
-<h1 id="binary-vs-library"><a class="header" href="#binary-vs-library">Binary VS Library</a></h1>
+<h1 id="background-binary-vs-library"><a class="header" href="#background-binary-vs-library">Background: Binary vs Library</a></h1>
 <p>When we get a program, we click it, it'll open, and we'll be able to do stuff. We'll have to choose the program based on our operating system.</p>
 <p>The program we're downloading is a <a href="https://en.wikipedia.org/wiki/Executable">binary, also known as an executable</a>: a bunch of operating system-specific operations amalgamated together so the computer can do the things we want it to in (hopefully) an efficient manner. You may have heard this word before on Windows as the <a href="https://en.wikipedia.org/wiki/.exe">.exe</a> file type  or just plain no file extension in Ubuntu or Linux. In Rust, we can make all of these file types really easily!</p>
-<p>Binaries always have a main function, written <code>fn main(){}</code>. This main function is the Steve Jobs (or <a href="https://en.wikipedia.org/wiki/Steve_Wozniak">Woz</a>) of all things in our binary (random thought, did you know <a href="https://en.wikipedia.org/wiki/Steve_Jobs">Steve Jobs travelled through India</a> studying Zen Buddhism? Crazy). </p>
-<p>Everything that will actually be done is in the main function, with other  functions, definitions, etc. being sourced from everywhere else. We build binaries by typing <code>cargo build --bin</code>.</p>
+<p>Binaries always have a main function, written <code>fn main(){}</code>. This main function is the <a href="https://en.wikipedia.org/wiki/Steve_Jobs">Steve Jobs</a> (or <a href="https://en.wikipedia.org/wiki/Steve_Wozniak">Woz</a>) of all things in our binary. Everything that will actually be done is in the main function, with other  functions, definitions, etc. being sourced from everywhere else. We build binaries by typing <code>cargo build --bin</code>.</p>
 <p>The other kind of thing we make in Rust is a library. While we also build a library with <code>cargo build --lib</code>, a library does not have a program that we can just run like what we would imagine. This is because a library's purpose is to be a bunch of small, reusable pieces of code that we can use to make an executable, but aren't really useful to our users. As an analogy, a library is like a tool shed and the binary a house that the user lives in.</p>
 <p>We will be building binaries in this book on the <a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=730c462d7171d22098403822416c698d">Rust playground</a>, a website where everything is already set up for us; there isn't any setup for this book! Each of the exercises will have a link to the playground with the exercise we're working on, it's that easy!</p>
 <h1 id="ready-go"><a class="header" href="#ready-go">Ready Go</a></h1>
@@ -188,6 +181,7 @@
 }
 
 </code></pre>
+<p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=172d9e4fa342625a6ea2acc8e74ad232">playground</a></p>
 <p>Comments don't do anything in code because of the two // marks before the text and can be put anywhere</p>
 <p>We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
 <p><img src="Chapter_2/../img/hsa_nasa.jpg" alt="hsa nasa" />
@@ -196,12 +190,16 @@
 <pre><code>fn main(){
     // Make a variable a that holds 1
     let a = 1;
+
     // Make a variable b that holds 2
     let b = 2;
+
     // Add them together to get c
     let c = a + b;
+
     // Multiple by 3!
     let d = c * 3;
+    
     // Divide by 3!
     let e = d / 3;
 
@@ -456,7 +454,7 @@ Dot notation is used when we have a thing and we want to do something with it. I
 <p>Biological data is packaged in file types for targeted purposes. If a variant analysis was done, we might get back a variant call file (<a href="https://en.wikipedia.org/wiki/Variant_Call_Format">VCF</a>), which will annotate variants from a genome reference. Sequencing Alignment Mapping (<a href="https://en.wikipedia.org/wiki/SAM_(file_format)">SAM</a>) files are usually a lot larger and contain all the sequencing data aligned to our genome reference. <a href="https://en.wikipedia.org/wiki/FASTA_format">Fasta</a> files (not really short for anything) are the simplest of all; they only contain sequences and descriptions of the sequences.</p>
 <h2 id="background-2"><a class="header" href="#background-2">Background</a></h2>
 <p><a href="http://samtools.github.io/hts-specs/">Official File Format Specifications</a>. Includes VCF,  SAM, CRAM, BAM, BCF, CSI, Tabix, crypt4gh, htsget, and Refget</p>
-<p>What VCF data looks like:</p>
+<p><a href="Chapter_6/">What VCF data looks like</a></p>
 <pre><code>#CHROM POS
 20 14370 20 17330 20 1110696 20 1230237 20 1234567
 ID REF rs6054257 G
@@ -472,6 +470,41 @@ FORMAT GT:GQ:DP:HQ GT:GQ:DP:HQ GT:GQ:DP:HQ GT:GQ:DP:HQ GT:GQ:DP
 NA00001 0|0:48:1:51,51 0|0:49:3:58,50 1|2:21:6:23,27 0|0:54:7:56,60 0/1:35:4
 NA00002 1|0:48:8:51,51 0|1:3:5:65,3 2|1:2:0:18,2 0|0:48:4:51,51 0/2:17:2
 NA00003 1/1:43:5:.,. 0/0:41:3 2/2:35:4 0/0:61:2 1/1:40:3
+</code></pre>
+<p><a href="Chapter_6/">What SAM data looks like:</a></p>
+<pre><code>@HD VN:1.6 SO:coordinate
+@SQ SN:ref LN:45
+r001
+r002
+r003
+r004
+r003
+r001
+99ref7 0ref9 0ref9 0ref16
+2064 ref 29
+ 147 ref 37
+30 8M2I4M1D3M =37 30 3S6M1P1I4M *0 30 5S6M *0 30 6M14N5M *0 17 6H5M *0 30 9M =7
+ 39 TTAGATAAAGGATACTG *
+  0 AAAAGATAAGGATA    *
+  0 GCCTAAGCTAA       *
+  0 ATAGCTTCAGC       *
+  0 TAGGC             *
+-39 CAGCGGCAT         *
+SA:Z:ref,29,-,6H5M,17,0;
+SA:Z:ref,9,+,5S6M,30,1;
+NM:i:1
+</code></pre>
+<p>BAM data is the same as SAM only compressed and in binary form. When converted, it looks just like SAM data. Raw, it looks like this (using <code>hexdump</code>):</p>
+<pre><code>0000000 42 41 4d 01 00 00 00 00 18 00 00 00 05 00 00 00
+0000010 63 68 72 31 00 3d 43 db 0e 05 00 00 00 63 68 72
+0000020 32 00 8d ed 7e 0e 05 00 00 00 63 68 72 33 00 1e
+0000030 95 cd 0b 05 00 00 00 63 68 72 34 00 64 c8 64 0b
+0000040 05 00 00 00 63 68 72 35 00 3c 8c c8 0a 05 00 00
+0000050 00 63 68 72 36 00 3b 02 33 0a 05 00 00 00 63 68
+0000060 72 37 00 67 43 7c 09 05 00 00 00 63 68 72 38 00
+0000070 76 56 b9 08 05 00 00 00 63 68 72 39 00 f7 be 6a
+0000080 08 06 00 00 00 63 68 72 31 30 00 9b 18 14 08 06
+0000090 00 00 00 63 68 72 31 31 00 34 09 0c 08 06 00 00
 </code></pre>
 <h1 id="images"><a class="header" href="#images">Images</a></h1>
 <p>Working with numbers and letters is fun, but it would be really cool to make visuals that wow our friends, and as always, there's a package for that!</p>
