--- a/book/print.html
+++ b/book/print.html
@@ -172,9 +172,11 @@
 <p>If you want to reach me or have something you want added to the book, find me on <a href="https://github.com/kana4">github</a> or let me know <a href="Chapter_1/keybase.io/kana4">here</a>!</p>
 <h1 id="background-binary-vs-library"><a class="header" href="#background-binary-vs-library">Background: Binary vs Library</a></h1>
 <p>When we get a program, we click it, it opens, and we'll be able to do stuff. We'll have to choose the program based on our operating system.</p>
-<p>The program we're downloading is most likely a <a href="https://en.wikibooks.org/wiki/Introduction_to_Programming_Languages/Compiled_Programs">compiled</a> program. This program is <a href="https://en.wikipedia.org/wiki/Executable">executable</a> by the specific operating system we're using. The program has system-specific operations amalgamated together so the computer can do the things we want it to in an efficient manner.  In Rust, we create these kinds of programs by telling Rust to make a binary file (e.g. an executable). You may have heard this word before on Windows as the <a href="https://en.wikipedia.org/wiki/.exe">.exe</a> file type  or just plain no file extension in Ubuntu or Linux. In Rust, we can make all of these file types really easily!</p>
-<p>Binaries always have a main function, written <code>fn main(){}</code>. This main function is the <a href="https://en.wikipedia.org/wiki/Steve_Jobs">Steve Jobs</a> (or <a href="https://en.wikipedia.org/wiki/Steve_Wozniak">Woz</a>) of all things in our binary. Everything that will actually be done is in the main function, with other  functions, definitions, etc. being sourced from everywhere else. We build binaries by typing <code>cargo build --bin</code>.</p>
-<p>The other kind of thing we make in Rust is a library. While we also build a library with <code>cargo build --lib</code>, a library does not have a program that we can just run like what we would imagine. This is because a library's purpose is to be a bunch of small, reusable pieces of code that we can use to make an executable, but aren't really useful to our users. As an analogy, a library is like a tool shed and the binary a car that the user drives.</p>
+<p>The program we're downloading is most likely a <a href="https://en.wikibooks.org/wiki/Introduction_to_Programming_Languages/Compiled_Programs">compiled</a> program. It contains system-specific operations amalgamated together so the computer can do the things we want it to in an efficient manner. In Rust, we create these kinds of programs by telling Rust to make a binary file (e.g. an <a href="https://en.wikipedia.org/wiki/Executable">executable</a>). You may have heard this word before on Windows as the <a href="https://en.wikipedia.org/wiki/.exe">.exe</a> file type  or just plain no file extension in Ubuntu or Linux. In Rust, we can make all of these file types really easily!</p>
+<p>Binaries always have a main function, written <code>fn main(){}</code>. This main function is the <a href="https://en.wikipedia.org/wiki/Steve_Jobs">Steve Jobs</a> (or <a href="https://en.wikipedia.org/wiki/Steve_Wozniak">Woz</a>) of all things in our binary. Everything that will actually be done is in the main function, with other functions being sourced from everywhere else.</p>
+<p>The other kind of thing we make in Rust is a library. A library does not have a program that we can just run like what we would imagine. This is because a library's purpose is to be a bunch of small, reusable pieces of code that we can use to make an executable, but aren't really meant to be a single program. As an analogy, a library is like a tool shed and the binary a car that the user drives.</p>
+<p><img src="Chapter_1/../img/compiler_background.jpg" alt="Compiler Background" />
+<em>Compiling is the final test to see whether we made a mistake, every programmer duels the compiler!</em></p>
 <h1 id="setup"><a class="header" href="#setup">Setup</a></h1>
 <p>We'll be building binaries in this book on the <a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=730c462d7171d22098403822416c698d">Rust playground</a>, a website where everything is already set up for us; ! Each of the exercises will have a link to the playground with the exercise we're working on, it's that easy!</p>
 <p><img src="Chapter_1/../img/playground_xkcd.png" alt="playground xkcd" /></p>
@@ -194,7 +196,7 @@
 <p>We need comments to let people know what we're doing in between code, and we'll use them to talk to you throughout code tutorials</p>
 <p>Our comment is in the <code>main</code> function, e.g. <code>fn main(){}</code>, specifying we're making a binary.</p>
 <p><img src="Chapter_2/../img/hsa_nasa.jpg" alt="hsa nasa" />
-<em>Electron density projection of human serum albumin protein taken by NASA. Even complicated biological things are made of smaller, simpler things!</em> </p>
+<em>Electron density projection of human serum albumin protein taken by NASA. Even complicated things are made of smaller, simpler things!</em> </p>
 <h1 id="add-subtract-multiply-divide"><a class="header" href="#add-subtract-multiply-divide">Add, Subtract, Multiply, Divide</a></h1>
 <pre><code>fn main(){
 
@@ -246,6 +248,8 @@
 }
 </code></pre>
 <p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=eaee565b026b99fc808e6245da640cc0">playground</a></p>
+<p><img src="Chapter_2/../img/doge_hello_world.jpg" alt="Doge Says Hello World" />
+<em>My favorite meme: Doge has computer, glasses, and coins! Much Wow</em></p>
 <h1 id="comparing-printing-strings"><a class="header" href="#comparing-printing-strings">Comparing Printing Strings</a></h1>
 <p>In <a href="https://en.wikipedia.org/wiki/Interpreter_(computing)">interpreted</a> languages, doing things is really short and succinct. Let's go with a classic: printing &quot;Hello World!&quot;.</p>
 <pre><code># In Python: 
@@ -279,7 +283,7 @@ fn main(){
 <h1 id="level-cleared"><a class="header" href="#level-cleared">Level Cleared!</a></h1>
 <p>Congratulations, you cleared level 2! It was a bunch of sections, but we learned some programming building blocks that we'll continue to use for the rest of our career. Time to take a break!</p>
 <p><img src="Chapter_2/../img/FMRI.gif" alt="fmri gif" /></p>
-<p><em>Functional MRI of a resting mouse brain, Zuckerman Institute</em>
+<p><em>Functional MRI of a resting mouse brain. Brains gotta rest! Zuckerman Institute</em>
 <a href="https://pubmed.ncbi.nlm.nih.gov/27974609/">Ma, Hillman et al.</a></p>
 <h1 id="vectors"><a class="header" href="#vectors">Vectors</a></h1>
 <p>We made a string in the prior section, so let's make it's simpler cousin, the vector!</p>
@@ -297,6 +301,8 @@ fn main(){
     let thing_of_things = vec![thing1,thing2,thing3,thing4];
 }
 </code></pre>
+<p><img src="Chapter_3/../img/not_that_vector.jpg" alt="not that kind of vector" /></p>
+<p><em>Vectors are cool</em></p>
 <h1 id="printing-vectors-and-debug-mode"><a class="header" href="#printing-vectors-and-debug-mode">Printing Vectors and Debug Mode</a></h1>
 <p>If you look closely, we didn't print the vector just yet, for that we need something called <code>debug</code>!</p>
 <p>Debug is something new if you're coming from other languages like R or Python, and it's something that we don't really need to know how it works, so we'll just leave it at: <em>We neeeeeeed it!</em> At least for vectors.</p>
