--- a/book/print.html
+++ b/book/print.html
@@ -434,7 +434,10 @@ fn main(){
 }
 </code></pre>
 <p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=343748b7922270bccc2ec0cfa84d245c">Playground</a></p>
-<h2 id="links"><a class="header" href="#links">Links:</a></h2>
+<p><img src="Chapter_5/../img/asl.gif" alt="American Sign Language sentence" />
+<em>Biological data can come in many forms, for example point representation of American Sign Language. Even though the data we're working with seems different, it's still digitization of biology, and we can use numbers to describe it!</em>
+<a href="https://commons.wikimedia.org/w/index.php?curid=74865888">By Athena.PEN - Own work, CC BY-SA 4.0</a></p>
+<h2 id="background"><a class="header" href="#background">Background:</a></h2>
 <p>The <code>mut</code> keyword: a <a href="https://doc.rust-lang.org/rust-by-example/scope/borrow/mut.html">mutable</a> variable. </p>
 <p><code>+=</code> notation: <a href="https://doc.rust-lang.org/book/appendix-02-operators.html">Adding</a> to a variable.</p>
 <p><code>-=</code> notation: <a href="https://doc.rust-lang.org/book/appendix-02-operators.html">Subtracting</a> to a variable.</p>
@@ -488,7 +491,9 @@ fn main(){
 }
 </code></pre>
 <p><a href="https://play.rust-lang.org/?version=stable&amp;mode=debug&amp;edition=2018&amp;gist=b0c5cfb4478657b0bbdb1a19c3f37f41">playground</a></p>
-<h2 id="background"><a class="header" href="#background">Background</a></h2>
+<p><img src="Chapter_5/../img/pacman.jpg" alt="Pac Man Integer Overflow!" /> </p>
+<p><em>Pac Man Integer Overflow! At level 256, Pac Man turns into the <a href="https://errors.fandom.com/wiki/Pac_Man_-_Infamous_Kill_Screen_Bug">Pac Matrix</a> for the same reasons we get an error here. I wish I was that good at Pac Man!</em></p>
+<h2 id="background-1"><a class="header" href="#background-1">Background</a></h2>
 <p><a href="https://doc.rust-lang.org/reference/types/numeric.html">Numeric types</a></p>
 <p>Converting between <a href="https://doc.rust-lang.org/rust-by-example/types/cast.html">('casting')</a> numeric types with <code>as</code></p>
 <h1 id="check-sequence"><a class="header" href="#check-sequence">Check Sequence</a></h1>
