--- a/book/print.html
+++ b/book/print.html
@@ -700,25 +700,11 @@ fn main(){
 &quot;Iterate through the vector and sum the elements, and hey, turbofish, don't forget to give me back a u64 please&quot;
 <code>vector.iter().sum::&lt;u64&gt;()</code>. </p>
 <p>Thanks <a href="https://turbo.fish">turbofish</a>!</p>
-<h1 id="counting-bases"><a class="header" href="#counting-bases">Counting Bases</a></h1>
-<pre><code>// println!(&quot;{:?}&quot;, boolean_vector.into_iter().all(|u| u==true));
-</code></pre>
-<p>Now that we know about iteration, let's use it to count the number of bases in a </p>
-<pre><code>use std::cmp::Ordering;
-use std::collections::BTreeMap;
-
-fn main() {
-        let btree: BTreeMap&lt;Ordering, u64&gt; = BTreeMap::new();
-        let test = vec![1,2,3,4];
-        let target = 3;
-        test.iter().for_each(|u| match u.cmp(&amp;target) {
-                    Ordering::Less =&gt; println!(&quot;less&quot;),
-                    Ordering::Equal =&gt; println!(&quot;equal&quot;),
-                    Ordering::Greater =&gt; println!(&quot;greater&quot;),
-                })
-}
-
-</code></pre>
+<h2 id=""><a class="header" href="#">::&lt;&gt;</a></h2>
+<h3 id="-1"><a class="header" href="#-1">::&lt;&gt;</a></h3>
+<h4 id="-2"><a class="header" href="#-2">::&lt;&gt;</a></h4>
+<h5 id="-3"><a class="header" href="#-3">::&lt;&gt;</a></h5>
+<h1 id="counting"><a class="header" href="#counting">Counting</a></h1>
 <h1 id="images"><a class="header" href="#images">Images</a></h1>
 <p>Working with numbers and letters is fun, but it would be really cool to make visuals that wow our friends, and as always, there's a package for that!</p>
 <p>In this chapter we're going to make images from our biological sequences!</p>
