--- a/book/Index/Short_Circuit.html
+++ b/book/Index/Short_Circuit.html
@@ -164,8 +164,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="short-circuit-logic"><a class="header" href="#short-circuit-logic">Short Circuit Logic</a></h1>
-<p>A function is called short circuiting 
-Using our si</p>
+<p>A function is called short circuiting </p>
 
                     </main>
 
