--- a/book/print.html
+++ b/book/print.html
@@ -762,6 +762,7 @@ SOLEXA-1GA-2_2_FC20EMB:5:172:417:550	16	chr1	10242	25	36M	*	0	0	AACCCTAAACCCTAAA
 <h1 id="closures"><a class="header" href="#closures">Closures</a></h1>
 <p><em>Coming Soon!</em></p>
 <h1 id="for-each"><a class="header" href="#for-each">For Each</a></h1>
+<p><em>Coming Soon!</em></p>
 <h1 id="counting-bases"><a class="header" href="#counting-bases">Counting Bases</a></h1>
 <p>Now that we know about iteration, let's use it to count the number of bases in a vector!</p>
 <pre><code>use std::collections::BTreeMap;
@@ -805,6 +806,8 @@ fn main() {
 <h1 id="images"><a class="header" href="#images">Images</a></h1>
 <p>Working with numbers and letters is fun, but it would be really cool to make visuals that wow our friends, and as always, there's a package for that!</p>
 <p>In this chapter we're going to make images from our biological sequences!</p>
+<p><em>TODO</em>
+insert jpg?</p>
 <h1 id="image-background"><a class="header" href="#image-background">Image Background</a></h1>
 <p>A computer understands an image a little differently from us: in <a href="https://en.wikipedia.org/wiki/Pixel">pixels</a>! Pixels are the elemental building blocks of images, usually each comprised of three colors: red, green, and blue. Depending on the intensity of each color in the pixel, we can make any other color. For example, white would be 100% red, green, blue (RGB), where black would be 0% red, green, blue.</p>
 <p><img src="Chapter_8/../img/magpix.jpg" alt="magnified pixels" /></p>
